# aoc

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  elm_template.elm
aoc2015/: Cargo.toml
aoc2015/src/: Day1.elm  Day2.elm  Day3.elm  lib.rs
aoc2015/src/day4/: mod.rs
aoc2015/src/day5/: mod.rs
aoc2019/: Cargo.toml
aoc2019/src/: lib.rs
aoc2019/src/day1/: day1.hs  mod.rs
aoc2019/src/day2/: day2.hs  mod.rs
aoc2019/src/day3/: day3.hs  mod.rs
aoc2019/src/day4/: mod.rs
aoc2019/src/day5/: mod.rs
aoc2019/src/day6/: mod.rs
aoc2019/src/day7/: mod.rs
aoc2019/src/day8/: mod.rs
aoc2023/: Cargo.toml
aoc2023/src/: lib.rs  main.rs
aoc2023/src/day14/: mod.rs
aoc2023/src/day15/: mod.rs
aoc2023/src/day19/: mod.rs
aoc2023/src/day21/: mod.rs
aoc2023/src/day22/: mod.rs
aoc2023/src/day23/: mod.rs
aoc2023/src/day24/: mod.rs
aoc2023/src/day25/: mod.rs
aoc2024/: Cargo.toml
aoc2024/inputs/: test.py
aoc2024/src/: lib.rs  main.rs
aoc2024/src/day1/: mod.rs
aoc2024/src/day10/: mod.rs
aoc2024/src/day11/: mod.rs
aoc2024/src/day12/: mod.rs
aoc2024/src/day13/: mod.rs
aoc2024/src/day14/: mod.rs
aoc2024/src/day2/: mod.rs
aoc2024/src/day3/: mod.rs
aoc2024/src/day4/: mod.rs
aoc2024/src/day5/: mod.rs
aoc2024/src/day6/: mod.rs
aoc2024/src/day7/: mod.rs
aoc2024/src/day8/: mod.rs
aoc2024/src/day9/: mod.rs
aoc2025/src/: lib.rs
aoc2025/src/day1/: mod.rs
aoc2025/src/day2/: mod.rs
aoclib/src/: utils.rs
src/: main.rs
src/cmd/: download.rs  generate.rs  mod.rs  run.rs
template/: haskell_template.hs
(+4 files in other folders)
